fix project image issue on mobile

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -30,6 +30,9 @@
 
 .project-card-image {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   aspect-ratio: 16 / 9;
 }
